WIP: Created Datasample class for drawing progress charts